--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 		"sourceMap": true,
 		"skipLibCheck": true,
 		"outDir": "./dist/",
-		"types": ["node", "oracledb"]
+		"types": ["node"]
 	},
 	"include": [
 		"credentials/**/*",
