--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "url": "https://github.com/rempel/n8n-oracle-connector.git"
   },
   "engines": {
-    "node": ">=18.10",
-    "pnpm": ">=9.1"
+    "node": ">=18.10"
   },
   "packageManager": "pnpm@10.12.1",
   "main": "index.js",
